Oxford Handbook citations throughout.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -186,7 +186,7 @@ Modulated Reality & Platforms that aim to modify the user's view, by multiplicat
 
 Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1999, Want2009}. One of the fundamental primary environments, occupying an endpoint of the reality-virtuality continuum. \\
 
- & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using HMD and body tracking techniques to remove logical anchors to the real world\footnote{\url{http://www.techcastglobal.com/documents/10193/34869/++Aaron/aade1a72-900b-4261-9214-061fba89053d}}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via traditional computer monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
+ & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using HMD and body tracking techniques to remove logical anchors to the real world\footnote{\url{http://www.techcastglobal.com/documents/10193/34869/++Aaron/aade1a72-900b-4261-9214-061fba89053d}}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via traditional computer monitors as rudimentary implementations of virtual reality - \textit{``a virtual reality accessed through standard personal computers is arguably very much in evidence in computer games''}~\cite{Green2014}. \\
 		
 \midrule
 
@@ -280,6 +280,8 @@ The Shadow Lab addressed the vacancy problem via the sensor/actuator infrastruct
 
 A potential source of standardization for the implementation of cross reality systems such as these that leveraged virtual world technology such as Second Life was presented by ISO/IEC 23005 (also referred to as MPEG-V), whose creation aimed to \textit{``enable the interoperability between virtual worlds \ldots\ and with the real world''} including through the use of \textit{``sensors, actuators, vision and rendering''}~\cite{InternationalOrganizationforStandardization2011}.
 
+The concept of a bidirectional connection between real and virtual environments, but which did not remove the boundaries that defined them, was also the basis of the `interreality' concept, in which user behaviour in the real world would influence the virtual environment that was used as part of a neuropsychological rehabilitation program~\cite{Giuseppe2014a}.
+
 %=========================================================================================================
 
 \subsubsection{Alternate Reality Definitions from Cross Reality}
@@ -329,7 +331,7 @@ The position of cross reality in relation to other alternate realities can be vi
 
 %Ontology - The core meaning within computer science is a model for describing the world that consists of a set of types, properties, and relationship types. There is also generally an expectation that the features of the model in an ontology should closely resemble the real world (related to the object).
 
-Of particular importance is to appreciate the distinction between a cross reality system and an augmented reality system\avxrfootnote{}, as both concepts involve user engagement with both real and virtual content. Whilst an augmented reality system features a single environment, comprised of the user's real world overlain by some virtual content, with the user perceiving stimuli from this single augmented environment (figure \ref{virtuality-continuum-augmented-reality}), a cross reality system instead features two discrete environments, one real and the other virtual, each complete unto itself (figure \ref{virtuality-continuum-cross-reality-1}), with the user attending either to the stimuli originating from the real environment (figure \ref{virtuality-continuum-cross-reality-2}) or to the stimuli originating from the virtual environment (figure \ref{virtuality-continuum-cross-reality-3}).
+Of particular importance is to appreciate the distinction between a cross reality system and an augmented reality system\avxrfootnote{}, as both concepts involve user engagement with both real and virtual content. An augmented reality system features a single environment comprised of the user's real world overlain by and `combined' with~\cite{Billinghurst2014} some virtual content, a \textit{`` `cybrid' environment existing simultaneously in virtual and physical modes''}~\cite{Lichty2014}, with the user perceiving stimuli from this single augmented environment (figure \ref{virtuality-continuum-augmented-reality}). A cross reality system instead features two discrete environments, one real and the other virtual, each complete unto itself (figure \ref{virtuality-continuum-cross-reality-1}), with the user attending either to the stimuli originating from the real environment (figure \ref{virtuality-continuum-cross-reality-2}) or to the stimuli originating from the virtual environment (figure \ref{virtuality-continuum-cross-reality-3}).
 
 \begin{figure}
 	\begin{center}
@@ -509,7 +511,7 @@ Waterworth and Waterworth present the \textit{three dimensions of virtual experi
 	\end{center}	
 \end{figure}
 
-In the three dimensions of virtual experience model the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
+In the three dimensions of virtual experience model the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning (or `distraction' from percepts~\cite{Chalmers2014}) results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
 
 \begin{quote}
 	\textit{``Presence arises from active awareness of our embodiment in a present world around us. Presence is not consciousness, and we may be highly conscious while feeling absent, at those times when we are relatively unaware of our own embodiment.''}~\cite{Waterworth2014}
