--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -72,7 +72,7 @@ Although many applications of augmented reality to cultural heritage sites are m
 
 VR has been used in virtual heritage not only where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also to allow for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006}, which can be situated at the site itself and create of a `space of illusion'~\cite{Tzortzaki2002}, allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
 
-Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to the general public in museums and visitor centres, performance is often considered more important than historical accuracy, a trait that mirrors a common theme in the computer gaming industry where \textit{``compelling action can reduce the need for full-scale visualization''}~\cite{Heim2014}.
+Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex} and it is not uncommon for VR systems to \textit{``reduce realism in order to achieve the desired real time performance''}~\cite{Chalmers2014}. Particularly for dissemination to the general public in museums and visitor centres, performance is often considered more important than historical accuracy, a trait that mirrors a common theme in the computer gaming industry where \textit{``compelling action can reduce the need for full-scale visualization''}~\cite{Heim2014} and where \textit{``abstraction can be just as engaging to users as a sense of realism''}~\cite{Champion2014}.
 
 %=========================================================================================================
 
@@ -983,7 +983,7 @@ Revisiting the definition of parallel reality, one can consider it to be disting
 	\item The experiential aspect - can the user freely switch between the environments?
 \end{enumerate}
 
-Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment. Even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport. The experience was more of \textit{mixing} (even if that mixing was performed by the human mind and not by the device itself), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
+Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment. Even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport, due to the greater `peripheral view'~\cite{Billinghurst2014} that the handheld interface presents compared to a HMD. The experience was more of \textit{mixing} (even if that mixing was performed by the human mind and not by the device itself), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
 
 Both with previous sitsim projects and VTW the user's view is always a mix, never purely virtual, and the user's position upon the locus of attention axis of the combined Milgram/Waterworth model can never reach its virtual reality extreme, due to the fact that the screen is always seen as a part of the larger real environment. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms may clarify how from the point of view of user experience, sitsim projects have been labelled in the past as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
 
