--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -547,7 +547,7 @@ While stage 1 of the investigation saw the suitability of applying a parallel re
 
 \section{Investigation Techniques}
 
-As with the stage 1 investigation a range of both qualitative and quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW and VR visual stimuli pertains to studying their reactions and responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature and highly subjective~\cite{Ijsselsteijn2001}. Subjective measures thus produced the bulk of the data for evaluation, however they were once again backed up by objective log data to support or contradict emerging relationships.
+As with the stage 1 investigation a range of both qualitative and quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW and VR visual stimuli pertains to studying their reactions and responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature (\textit{``Psychology is the physics of virtual reality''}\footnote{\url{ftp://ftp.hitl.washington.edu/pub/publications/papers/m-90-1.html}}) and highly subjective~\cite{Ijsselsteijn2001}. Subjective measures thus produced the bulk of the data for evaluation, however they were once again backed up by objective log data to support or contradict emerging relationships.
 
 Stage 2 participants completed the same pre-task questionnaire as stage 1 participants and Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-2-1}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{appendix-9-item-likert-type-questionnaire-stage-2-2}). The SUS questionnaire was not used, while post-task interviews (prompts included as appendices \ref{appendix-interview-questions-stage-2-1} and \ref{appendix-interview-questions-stage-2-2} for stages 2.1 and 2.2 respectively) and logging were present. In addition to the Likert-type questionnaire all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire}).
 
@@ -561,7 +561,7 @@ Under these categories one can consider the log data recorded by the Mirrorshade
 \label{presence-questionnaires}
 Due to the nature of the Mirrorshades platform and the adoption of the Waterworth model of the break in presence concept, most established presence questionnaires could not be directly applied. These presence questionnaires have predominantly been written for application to `full immersion' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment, adopting the Slater and Steed model of the break in (virtual) presence concept, upholding the notion of \textit{``VR as portal to a private world of simulation where physical senses are immersed by prosthetics, where users temporarily `forget' their primary sensory world''}~\cite{Heim2014}.
 
-Illustrated in reference to an embodied cognition framework, the sense of presence in these full immersion VR scenarios is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as being possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. A break in presence can result here from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
+Illustrated in reference to an embodied cognition framework, as for mediated presence \textit{``action is more important than perception''}~\cite{Giuseppe2014}, the sense of presence in these full immersion VR scenarios is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as being possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. A break in presence can result here from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
 
 However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible, but instead complimentary and we do not wish for the user to `forget' about either `sensory world'. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, likely incompatible with and requiring suppression of the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to the RW model and can be attended to in tandem. The effect of this complimentary nature of the environments can be considered within the context of Waterworth and Waterworth's `three layers of presence'~\cite{Mantovani2010, Giuseppe2014} that constitute:
 
