--- a/bib.bib
+++ b/bib.bib
@@ -656,6 +656,26 @@ publisher = {University of Chicago Press},
 title = {{Synthetic Worlds: The Business and Culture of Online Games}},
 year = {2006}
 }
+@incollection{Chalmers2014,
+author = {Chalmers, Alan},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {36},
+editor = {Grimshaw, M},
+pages = {602--614},
+publisher = {Oxford University Press},
+title = {{Level of Realism: Feel, Smell and Taste in Virtual Environments}},
+year = {2014}
+}
+@incollection{Champion2014,
+author = {Champion, Erik},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {16},
+editor = {Grimshaw, M},
+pages = {269--283},
+publisher = {Oxford University Press},
+title = {{History and Cultural Heritage in Virtual Environments}},
+year = {2014}
+}
 @inproceedings{Christou2006,
 address = {New York, New York, USA},
 author = {Christou, Chris and Angus, Cameron and Loscos, Celine and Dettori, Andrea and Roussou, Maria},
@@ -855,12 +875,6 @@ publisher = {Oxford University Press},
 title = {{The Virtuality and Reality of Avatar Cyberspace}},
 year = {2014}
 }
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
-urldate = {2013-04-01}
-}
 @misc{Davies,
 author = {Davies, C J},
 title = {{Arduino sketch for Pangolin}},
@@ -877,6 +891,12 @@ urldate = {2013-04-01}
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
+urldate = {2013-04-01}
+}
+@misc{Daviesb,
+author = {Davies, C J},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {2013-04-01}
 }
 @inproceedings{Davies2012,
@@ -1335,6 +1355,16 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17677199},
 volume = {75},
 year = {2007}
 }
+@incollection{Giuseppe2014a,
+author = {Giuseppe, Riva},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {39},
+editor = {Grimshaw, M},
+pages = {649--665},
+publisher = {Oxford University Press},
+title = {{Medical Clinical Uses of Virtual Worlds}},
+year = {2014}
+}
 @incollection{Giuseppe2014,
 author = {Giuseppe, Riva and Waterworth, J A},
 booktitle = {The Oxford Handbook of Virtuality},
@@ -1356,6 +1386,16 @@ year = {2012}
 author = {Google},
 title = {{My Tracks - Android Apps on Google Play}},
 year = {2012}
+}
+@incollection{Green2014,
+author = {Green, David and Chandler, Tom},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {33},
+editor = {Grimshaw, M},
+pages = {549--568},
+publisher = {Oxford University Press},
+title = {{Virtual Ecologies and Environments}},
+year = {2014}
 }
 @misc{Greenhalgh,
 author = {Greenhalgh, Chris and Izadi, Shahram and Benford, Steve},
@@ -1414,17 +1454,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Hart,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-04-01}
-}
 @misc{Harta,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-03-31}
+}
+@misc{Hart,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-04-01}
 }
 @inproceedings{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1577,6 +1617,12 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {2013-03-28},
 year = {2013}
 }
+@misc{Hughes2006,
+author = {Hughes, Ian},
+title = {{Lessons from second life}},
+url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
+year = {2006}
+}
 @misc{Hughes2009,
 author = {Hughes, Ian},
 title = {{Wimbledon – A fanployee perspective}},
@@ -1603,12 +1649,6 @@ author = {Hughes, Ian},
 title = {{Well it got my attention – Second Life}},
 url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
 urldate = {2012-05-21},
-year = {2006}
-}
-@misc{Hughes2006,
-author = {Hughes, Ian},
-title = {{Lessons from second life}},
-url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
 year = {2006}
 }
 @misc{Hunt,
@@ -2172,6 +2212,28 @@ title = {{The digital Michelangelo project: 3D scanning of large statues}},
 url = {http://dl.acm.org/citation.cfm?id=344779.344849 http://dx.doi.org/10.1145/344779.344849},
 year = {2000}
 }
+@incollection{Lichty2014,
+author = {Lichty, Patrick},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {27},
+editor = {Grimshaw, M},
+pages = {444--462},
+publisher = {Oxford University Press},
+title = {{The Translation of Art in Virtual Worlds}},
+year = {2014}
+}
+@incollection{Liestøl2011,
+author = {Liest\o l, Gunnar},
+booktitle = {Handbook of Augmented Reality},
+doi = {10.1007/978-1-4614-0064-6\_14},
+editor = {Furht, Borko},
+isbn = {978-1-4614-0063-9},
+pages = {309--319},
+publisher = {Springer New York},
+title = {{Situated Simulations Between Virtual Reality and Mobile Augmented Reality: Designing a Narrative Space}},
+url = {http://link.springer.com/chapter/10.1007\%2F978-1-4614-0064-6\_14},
+year = {2011}
+}
 @incollection{Liestøl2012,
 author = {Liest\o l, Gunnar},
 booktitle = {Progress in Cultural Heritage Preservation},
@@ -2195,18 +2257,6 @@ keywords = {Augmented reality,Digital genre design,Meaningware,Situated simulati
 pages = {29--34},
 title = {{Augmented reality and digital genre design - Situated simulations on the iPhone}},
 year = {2009}
-}
-@incollection{Liestøl2011,
-author = {Liest\o l, Gunnar},
-booktitle = {Handbook of Augmented Reality},
-doi = {10.1007/978-1-4614-0064-6\_14},
-editor = {Furht, Borko},
-isbn = {978-1-4614-0063-9},
-pages = {309--319},
-publisher = {Springer New York},
-title = {{Situated Simulations Between Virtual Reality and Mobile Augmented Reality: Designing a Narrative Space}},
-url = {http://link.springer.com/chapter/10.1007\%2F978-1-4614-0064-6\_14},
-year = {2011}
 }
 @incollection{Liestøl2014,
 author = {Liest\o l, Gunnar and Morrison, A},
@@ -2237,23 +2287,6 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {2012-05-21},
 year = {2006}
 }
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
-@phdthesis{Lifton2007a,
-address = {Department of Media Arts and Sciences},
-annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
-author = {Lifton, Joshua},
-month = sep,
-school = {Massachusetts Institute of Technology},
-title = {{Dual Reality: An Emerging Medium}},
-type = {Ph.D. Dissertation},
-year = {2007}
-}
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
                 
@@ -2283,6 +2316,23 @@ publisher = {IEEE},
 title = {{Consumer Adoption of Cross Reality Systems}},
 url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
 year = {2010}
+}
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
+}
+@phdthesis{Lifton2007a,
+address = {Department of Media Arts and Sciences},
+annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
+author = {Lifton, Joshua},
+month = sep,
+school = {Massachusetts Institute of Technology},
+title = {{Dual Reality: An Emerging Medium}},
+type = {Ph.D. Dissertation},
+year = {2007}
 }
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
@@ -2530,6 +2580,11 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
+}
 @article{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas: 1. the idea of constructing special eyeglasses to modify how he saw the world; and 2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life. Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.},
 author = {Mann, Steve},
@@ -2538,11 +2593,6 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
-}
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
 }
 @article{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2736,17 +2786,17 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
+}
 @misc{MIT,
 annote = {From Duplicate 1 ( Responsive Environments Group - MIT )},
 author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
-}
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2916,15 +2966,6 @@ pages = {165--174},
 title = {{Supporting interoperability and presence awareness in collaborative mixed reality environments}},
 year = {2013}
 }
-@article{Papagiannakis2009,
-abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
-author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
-journal = {Arqueologica 2.0},
-pages = {16--20},
-title = {{Recreating Daily Life in Pompeii}},
-volume = {1},
-year = {2009}
-}
 @article{Papagiannakis2007,
 abstract = {We propose a new methodology for real-time mobile mixed reality systems that feature realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. Although ini- tially targeted at Cultural Heritage Sites, the paradigm is by no means limited to such subjects. The abandonment of traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations with 3D, interactive, augmented histori- cal character-based event representations in a mobile and wearable setup, is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with character to object interaction, a markerless camera tracker specialized for non-invasive geometrical registration on heritage sites and a PRT mixed reality illumination model for more consistent real-virtual real-time rendering. We demonstrate a real-time case study on the actual site of ancient Pompeii. PDF},
 author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
@@ -2937,6 +2978,15 @@ title = {{Mobile Augmented Heritage: Enabling Human Life in Ancient Pompeii}},
 url = {http://openurl.ingenta.com/content/xref?genre=article\&issn=1478-0771\&volume=5\&issue=2\&spage=396},
 volume = {5},
 year = {2007}
+}
+@article{Papagiannakis2009,
+abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
+author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
+journal = {Arqueologica 2.0},
+pages = {16--20},
+title = {{Recreating Daily Life in Pompeii}},
+volume = {1},
+year = {2009}
 }
 @article{Papagiannakis2005,
 abstract = {This paper presents an innovative 3D reconstruction of ancient fresco paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial-life dramaturgical behaviours in an immersive, fully mobile augmented reality (AR) environment. The main goal is to push the limits of current AR and virtual storytelling technologies and to explore the processes of mixed narrative design of fictional spaces (e.g. fresco paintings) where visitors can experience a high degree of realistic immersion. Based on a captured/real-time video sequence of the real scene in a video-see-through HMD set-up, these scenes are enhanced by the seamless accurate real-time registration and 3D rendering of realistic complete simulations of virtual flora and fauna (virtual humans and plants) in a real-time storytelling scenario-based environment. Thus the visitor of the ancient site is presented with an immersive and innovative multi-sensory interactive trip to the past. Copyright (c) 2005 John Wiley T Sons, Ltd.},
@@ -3494,16 +3544,6 @@ keywords = {Passive Haptics,Substitutional Reality,Virtual Reality},
 title = {{Substitutional Reality : Using the Physical Environment to Design Virtual Reality Experiences}},
 year = {2015}
 }
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
-}
 @article{Sevan2008,
 author = {Sivan, Yesha},
 issn = {19418477},
@@ -3540,6 +3580,16 @@ title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
 url = {http://journals.tdl.org/jvwr/article/view/359},
 volume = {1},
 year = {2008}
+}
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
 }
 @article{Slater1999,
 abstract = {Explains why for not using the Witmer and Singer questionnaire for eliciting presence in virtual environments and a person's immersive tendencies. Differences in the definition of presence; Three aspects of presence; Factors that influence presence; Opinion on the questionnaire's design and methodology.},
@@ -3884,6 +3934,16 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
+@incollection{Turkle2004,
+author = {Turkle, Sherry},
+booktitle = {Community in the Digital Age: Philosophy and Practice},
+chapter = {6},
+editor = {Feenberg, Andrew and Barney, Darin},
+pages = {101--117},
+publisher = {Rowman \& Littlefield},
+title = {{Our Split Screens}},
+year = {2004}
+}
 @book{Turkle2011,
 author = {Turkle, Sherry},
 pages = {384},
@@ -3900,16 +3960,6 @@ publisher = {Simon \& Schuster},
 title = {{Life on the Screen}},
 year = {1997}
 }
-@incollection{Turkle2004,
-author = {Turkle, Sherry},
-booktitle = {Community in the Digital Age: Philosophy and Practice},
-chapter = {6},
-editor = {Feenberg, Andrew and Barney, Darin},
-pages = {101--117},
-publisher = {Rowman \& Littlefield},
-title = {{Our Split Screens}},
-year = {2004}
-}
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
 booktitle = {Virtual Space: Spatiality in Virtual Inhabited 3D Worlds},
@@ -3919,6 +3969,12 @@ pages = {258--284},
 publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as ``Space of Illusion'' in Museum Displays}},
 year = {2002}
+}
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
 }
 @misc{U-bloxAGa,
 author = {u-blox AG},
@@ -3931,12 +3987,6 @@ author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {2013-02-11}
-}
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
 }
 @misc{UgoTrade2007,
 annote = {From Duplicate 1 ( EOLUS Makes Leap To 3D Internet On Second Life - UgoTrade )},
@@ -4312,12 +4362,6 @@ title = {{Autonomy, Interaction, and Presence}},
 volume = {1},
 year = {1992}
 }
-@inproceedings{Zhao2002,
-author = {Zhao, Shanyang},
-booktitle = {Proceedings of the fifth annual international workshop on Presence},
-title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
-year = {2002}
-}
 @article{Zhao2003,
 abstract = {This paper contributes to the presence literature by explicating the meanings and subtypes of copresence. Copresence is defined here as consisting of two dimensions: copresence as mode of being with others, and copresence as sense of being with others. Mode of copresence refers to the physical conditions that structure human interaction. Six such conditions are delineated. Sense of copresence, on the other hand, refers to the subjective experience of being with others that an individual acquires in interaction. The main argument of this paper is that mode of copresence affects sense of copresence, and knowledge of how the former affects the latter will benefit copresence design. ABSTRACT FROM AUTHOR},
 author = {Zhao, Shanyang},
@@ -4331,4 +4375,10 @@ title = {{Toward a Taxonomy of Copresence}},
 url = {http://www.mitpressjournals.org/doi/abs/10.1162/105474603322761261},
 volume = {12},
 year = {2003}
+}
+@inproceedings{Zhao2002,
+author = {Zhao, Shanyang},
+booktitle = {Proceedings of the fifth annual international workshop on Presence},
+title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
+year = {2002}
 }
